internal/cmd/egctl/testdata/config/out/out.cluster.json
{"@type":"type.googleapis.com/envoy.admin.v3.ClustersConfigDump", "versionInfo":"2", "staticClusters":[{"cluster":{"@type":"type.googleapis.com/envoy.config.cluster.v3.Cluster", "name":"xds_cluster", "type":"STRICT_DNS", "connectTimeout":"1s", "loadAssignment":{"clusterName":"xds_cluster", "endpoints":[{"lbEndpoints":[{"endpoint":{"address":{"socketAddress":{"address":"envoy-gateway", "portValue":18000}}}}]}]}, "typedExtensionProtocolOptions":{"envoy.extensions.upstreams.http.v3.HttpProtocolOpti [...]
