internal/cmd/egctl/testdata/config/out/out.listener.json
{
	"@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
	"versionInfo": "2",
	"dynamicListeners": [{
		"name": "default-eg-http",
		"activeState": {
			"versionInfo": "42c71fb50c315ee3a32b327da69f8cc0baf420bc84b747e82d9c38e1b0c33eb2",
			"listener": {
				"@type": "type.googleapis.com/envoy.config.listener.v3.Listener",
				"name": "default-eg-http",
				"address": {
					"socketAddress": {
						"address": "0.0.0.0",
						"portValue": 10080
					}
				},
				"defaultFilterChain": {
					"filters": [{
						"name": "envoy.filters.network.http_connection_manager",
						"typedConfig": {
							"@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
							"statPrefix": "http",
							"rds": {
								"configSource": {
									"apiConfigSource": {
										"apiType": "DELTA_GRPC",
										"transportApiVersion": "V3",
										"grpcServices": [{
											"envoyGrpc": {
												"clusterName": "xds_cluster"
											}
										}],
										"setNodeOnFirstMessageOnly": true
									},
									"resourceApiVersion": "V3"
								},
								"routeConfigName": "default-eg-http"
							},
							"httpFilters": [{
								"name": "envoy.filters.http.router",
								"typedConfig": {
									"@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
								}
							}],
							"accessLog": [{
								"name": "envoy.access_loggers.file",
								"typedConfig": {
									"@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
									"path": "/dev/stdout"
								}
							}],
							"useRemoteAddress": true,
							"upgradeConfigs": [{
								"upgradeType": "websocket"
							}]
						}
					}]
				},
				"accessLog": [{
					"name": "envoy.access_loggers.file",
					"filter": {
						"responseFlagFilter": {
							"flags": ["NR"]
						}
					},
					"typedConfig": {
						"@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
						"path": "/dev/stdout"
					}
				}]
			},
			"lastUpdated": "2023-02-23T09:05:38.446Z"
		}
	}]
}
