internal/cmd/egctl/testdata/config/out/out.listener.yaml
'@type': type.googleapis.com/envoy.admin.v3.ListenersConfigDump
dynamicListeners:
- activeState:
    lastUpdated: "2023-02-23T09:05:38.446Z"
    listener:
      '@type': type.googleapis.com/envoy.config.listener.v3.Listener
      accessLog:
      - filter:
          responseFlagFilter:
            flags:
            - NR
        name: envoy.access_loggers.file
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          path: /dev/stdout
      address:
        socketAddress:
          address: 0.0.0.0
          portValue: 10080
      defaultFilterChain:
        filters:
        - name: envoy.filters.network.http_connection_manager
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            accessLog:
            - name: envoy.access_loggers.file
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
            httpFilters:
            - name: envoy.filters.http.router
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
            rds:
              configSource:
                apiConfigSource:
                  apiType: DELTA_GRPC
                  grpcServices:
                  - envoyGrpc:
                      clusterName: xds_cluster
                  setNodeOnFirstMessageOnly: true
                  transportApiVersion: V3
                resourceApiVersion: V3
              routeConfigName: default-eg-http
            statPrefix: http
            upgradeConfigs:
            - upgradeType: websocket
            useRemoteAddress: true
      name: default-eg-http
    versionInfo: 42c71fb50c315ee3a32b327da69f8cc0baf420bc84b747e82d9c38e1b0c33eb2
  name: default-eg-http
versionInfo: "2"
